<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_no_header">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/loginText"
                android:id="@+id/textView"
                android:textColor="#ffffffff"
                android:textStyle="bold"
                android:textSize="30dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/loginInput"
                android:background="#ffffffff"
                android:alpha="0.5"
                android:hint="@string/loginHint"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/passwordText"
                android:id="@+id/opponentNameText"
                android:textColor="#ffffffff"
                android:textStyle="bold"
                android:textSize="30dp"
                android:layout_marginRight="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passwordInput"
                android:background="#ffffffff"
                android:alpha="0.5"
                android:hint="@string/passwordHint"
                android:gravity="center_horizontal" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/rememberMeText"
                android:id="@+id/textView2"
                android:textStyle="bold"
                android:textSize="30dp"
                android:textColor="#ffffffff" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New ToggleButton"
                android:id="@+id/rememberMe"
                android:textOn="@string/yesText"
                android:textOff="@string/noText"
                android:textColor="#ff000001"
                android:textStyle="bold"
                android:textSize="30dp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/errorTextView"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#ff000000" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginProgressBar"
        android:layout_below="@+id/errorTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginText"
        android:id="@+id/loginButton"
        android:layout_marginBottom="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="login"
        android:textStyle="bold"
        android:textSize="30dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_mute"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/sound_volume"
        android:onClick="muteClicked"
        android:longClickable="false"
        android:background="@android:color/transparent"
        android:focusableInTouchMode="false" />

</RelativeLayout>