<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dizelrox.hooliganwarsandroid.GUI.SignUp_Activity"
    android:background="@drawable/background_no_header"
    android:clickable="false">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/playerNameText"
                android:id="@+id/textView"
                android:textColor="#ffffffff"
                android:textStyle="bold"
                android:textSize="30dp"
                android:layout_marginRight="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/playerNameInput"
                android:background="#ffffffff"
                android:alpha="0.5"
                android:gravity="center_horizontal"
                android:hint="@string/playerNameHint" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRow">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/loginText"
                android:id="@+id/errorTextView"
                android:textColor="#ffffffff"
                android:textStyle="bold"
                android:textSize="30dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/loginInput"
                android:background="#ffffffff"
                android:alpha="0.5"
                android:gravity="center_horizontal"
                android:hint="@string/loginHint" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRow2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/passwordText"
                android:id="@+id/textView5"
                android:textColor="#ffffffff"
                android:textStyle="bold"
                android:textSize="30dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/passwordInput"
                android:background="#ffffffff"
                android:alpha="0.5"
                android:gravity="center_horizontal"
                android:hint="@string/passwordHint"
                android:inputType="textPassword" />

        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/opponentNameText"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpText"
        android:id="@+id/signUpButton"
        android:layout_below="@+id/opponentNameText"
        android:onClick="signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:textSize="30dp"
        android:textStyle="bold" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpProgressBar"
        android:layout_below="@+id/opponentNameText"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:focusableInTouchMode="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUp_mute"
        android:src="@drawable/sound_volume"
        android:longClickable="false"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
