<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="6"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_test_1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:weightSum="5"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_weight="4"

            android:layout_height="0dp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/playerBattleHelmet"
                android:layout_weight="0.25"
                android:src="@drawable/default_big_image" />

            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/playerBattleArmor"
                android:layout_weight="0.25"
                android:src="@drawable/default_big_image" />

            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/playerBattleLegs"
                android:layout_weight="0.25"
                android:src="@drawable/default_big_image" />

            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/playerBattleFeet"
                android:layout_weight="0.25"
                android:src="@drawable/default_big_image" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/playerBattleWeapon"
                android:layout_weight="0.25"
                android:src="@drawable/default_big_image" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:weightSum="5"
        android:layout_weight="4">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="5"
            android:layout_weight="4">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:paddingTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="DizelRox"
                    android:id="@+id/playerNameText"
                    android:textColor="#ffffffff"
                    android:textStyle="bold"
                    android:textSize="35sp" />

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/playerHealthBar"
                    android:progressDrawable="@drawable/healthprogressbar"
                    android:progress="20"
                    android:max="100" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/playerBattleIcon" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingTop="70dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/defenseArea"
                    android:id="@+id/textView3"
                    android:textStyle="bold" />
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="#55ffffff"
                    android:id="@+id/attackRadios">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/headText"
                    android:tag="0"
                    android:id="@+id/radioButton"
                    android:onClick="radioButtonClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chestText"
                    android:tag="1"
                    android:id="@+id/radioButton2"
                    android:onClick="radioButtonClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stomachText"
                    android:tag="2"
                    android:id="@+id/radioButton3"
                    android:onClick="radioButtonClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legsText"
                    android:tag="3"
                    android:id="@+id/radioButton4"
                    android:onClick="radioButtonClicked" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/attackAreaText"
                    android:id="@+id/textView4"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/defenseRadios"
                    android:gravity="center_vertical"
                    android:background="#55ffffff">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/headText"
                        android:tag="4"
                        android:id="@+id/radioButton5"
                        android:onClick="radioButtonClicked" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chestText"
                        android:tag="5"
                        android:id="@+id/radioButton6"
                        android:onClick="radioButtonClicked" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stomachText"
                        android:tag="6"
                        android:id="@+id/radioButton7"
                        android:onClick="radioButtonClicked" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/legsText"
                        android:tag="7"
                        android:id="@+id/radioButton8"
                        android:onClick="radioButtonClicked" />
                </RadioGroup>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/attackButtonText"
                    android:id="@+id/attackButton"
                    android:layout_marginTop="10dp"
                    android:onClick="attackButtonPressed"
                    android:textSize="30dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:paddingTop="30dp"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Waiting..."
                    android:id="@+id/opponentNameText"
                    android:textColor="#ffffffff"
                    android:textStyle="bold"
                    android:textSize="35dp" />

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/opponentHealthBar"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/healthprogressbar"
                    android:visibility="gone" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/opponentBattleIcon" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#8effffff">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="6"
                android:scrollbars = "vertical"
                android:id="@+id/consoleText"
                android:textSize="20dp"
                android:gravity="bottom"
                android:textColor="#ff000000" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:weightSum="5"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_weight="4"
            android:layout_height="0dp"
            android:id="@+id/linearLayout"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/opponentBattleHelmet"
                android:layout_weight="0.25"
                android:src="@drawable/default_big_image" />

            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/opponentBattleArmor"
                android:layout_weight="0.25"
                android:src="@drawable/default_big_image" />

            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/opponentBattleLegs"
                android:layout_weight="0.25"
                android:src="@drawable/default_big_image" />

            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/opponentBattleFeet"
                android:layout_weight="0.25"
                android:src="@drawable/default_big_image" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:id="@+id/linearLayout2"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/opponentBattleWeapon"
                android:layout_weight="0.25"
                android:src="@drawable/default_big_image" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>